apps/admin/src/core/components/file-upload-box/file-upload-box.component.scss
 .material-icons {
     font-size: 25px;
 }

 .file-list {
     display: flex;
     align-items: flex-start;
     height: 180px;
     background: #fff;
     cursor: pointer;
     color: #717386;
     border: 2px dashed #717386;
     border-radius: 5px;
     font-size: 16px;
     overflow-x: auto;
 }

 .upload-group {
     //padding: 0;
     //margin: 0;
     //width: 100%;
     //height: 100%;
     //display: grid;
     //align-items: center;
     //justify-content: center;
     //grid-template-columns: auto;
     //grid-template-rows: 100px 100px;
     //column-gap: 35px;

     .upload-control {
         //z-index: 2 !important;
       height: 100px;
         ngx-dropzone {
           height: 100px;
             z-index: 3 !important;

             ::ng-deep a {
                 text-decoration: underline;
                 cursor: pointer;
             }

             ngx-dropzone-preview, ngx-dropzone-image-preview {
                 height: 90px !important;
                 max-height: 100px !important;
                 min-height: 50px !important;
             }
         }
     }
 }

 .invalid-type-msg {
     color: red;
 }

// .file-list {
//     padding: 10px !important;
// }

// .no-files-text {
//     color: red !important;
// }

// .no-files-border {
//     border-color: red !important;
// }

